2007-07-30  Javier Fernandez Garcia-Boente  <jfernandez@igalia.com>
	* Fixed some bugs in TnyMergeFolder notification function. This
        method was overwriting data into old change, rather than use the 
	new_change structure to propagate changes to observed folders.

2007-07-27  Murray Cumming  <murrayc@murrayc.com>

	* camel/camel-mime-parser.c: (folder_scan_content),
	(folder_scan_step): Initialize some variables because 
	valgrind complains about uninitialized variables here. This does not 
	fix it but it should make things clearer for someone who can fix it.

2007-07-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged tny-camel-folder.c with devel/sessionwork's version
	* This moves the poke-status operations to the account's queue
	* Merged camel-pop3-engine.c with devel/sessionwork's version
	* This fixes a locking problem while disconnecting the POP account

	* Merging the Cond patch from devel/sessionwork

2007-07-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* More granularity in the locking of the POP code
	* Several fixes in the POP code
	* Folder renaming for local folders

2007-07-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* Various locking improvements in the POP code
	* Parallel retrieval of messages
	* Disconnecting after summary retrieval of a POP folder
	* Disconnecting after get-msg and sync of a POP folder
	* Some reference counting problems when factoring folders

2007-07-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* Preparing for a release candidate
	* Added skeleton for webkit support
	* Restructuring the internal API for async methods a bit
	* Experimental lining up of async functions in one thread

2007-07-23  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-account.c: Improved the 
	documentation for tny_camel_account_set_online().

	* libtinymail/tny-merge-folder.c: (tny_merge_folder_get_id),
	(tny_merge_folder_instance_init): Use 
	unknown_mergefolder instead of an empty string for the default ID, 